# contextualize-all-project-files

./: .gitignore  Cargo.toml  README.MD
src/: cli_arguments.rs  main.rs
