[package]
name = "contextualize-all-project-files"
version = "0.1.0"
edition = "2024"
authors = ["Drew Chase"]
description = "A tool to create a contextualized version of all project files into a single file."

[[bin]]
name = "capf"
path = "src/main.rs"

[dependencies]
clap = { version = ">=4", features = ["unicode", "color", "wrap_help", "string", "help", "error-context", "derive", "suggestions", "usage"] }
pretty_env_logger = "0.5.0"
log = "0.4.28"
anyhow = "1.0.75"
walkdir = "2.3.3"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "sync", "fs", "io-util"] }
regex = {version = "1.11.3"}